--- a/Portfolio2/styles.css
+++ b/Portfolio2/styles.css
@@ -10,7 +10,6 @@ html{
 }
 body {
 	font-family: Arial,Helvetica,sans-serif;
-	font-size: 10px;
     overflow-y: scroll;
 }
 .container{
@@ -26,6 +25,7 @@ body {
 #navbar{
     display: flex;
     align-items: center;
+    padding: 10px 0px;
 }
 #navbar h2 {
     margin: 0;
@@ -70,7 +70,7 @@ nav ul li a{
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-
+    opacity: 0.7;
 }
  
 #name p{
@@ -103,6 +103,7 @@ nav ul li a{
     background-image: url(background.jpg);
     background-size: cover;
     background-position: center;
+    
 }
 .row{
     display: flex;
@@ -131,6 +132,7 @@ height: auto;
     background-image: url(background.jpg);
     background-size: cover;
     background-position: center;
+    opacity: 0.7;
 }
 .contact-left{
     flex-basis: 35%;
@@ -206,4 +208,29 @@ form btn2{
 .btn:hover{
     background: red;
 
+}
+/* work */
+#work{
+    background-image: url(background.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#work  h1{
+    font-size: 2.1rem;
+    line-height: 1.4;
+    letter-spacing: 0.2rem;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+.maindiv{
+    width: 100vh;
+    height: 55vh;
+    background-image: url(beawesome.jpeg);
+    background-size: cover;
+    background-position: center;
+    margin-bottom: 30px;   
 }
